some box color fixes for dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -120,6 +120,18 @@
 .bkgdblue {
   background: #000000;
 }
+.item22 {
+  background: #651BB7; 
+}
+.item23 {
+  background: #007B88; 
+}
+.item30 {
+  background: #651BB7; 
+}
+.item31 {
+  background: #007B88; 
+}
 .item37 {
   background: #651BB7; 
 }
